[tool.poetry]
name = "variance-units"
version = "0.1.0"
description = ""
authors = ["ExpandingDev <tylersengia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.29"
python-dotenv = "^0.19.2"
connexion2 = "^2.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
